fix: replace `word-wrap: word-break` with `overflow-wrap: break-word`

--- a/src/main/scss/base/_style.scss
+++ b/src/main/scss/base/_style.scss
@@ -148,7 +148,7 @@ td.tab {
 
 pre {
   white-space: pre-wrap;
-  word-wrap: word-break;
+  overflow-wrap: break-word;
   margin: 0 0 var(--section-padding);
   padding: 0.8rem 1rem;
   border-radius: var(--form-input-border-radius);
@@ -160,7 +160,7 @@ pre {
   line-height: 1.66;
 
   a {
-    word-wrap: word-break;
+    overflow-wrap: break-word;
   }
 }
 
